# Game_HungBia

./: CMakeLists.txt  Makefile  README.md  icon.rc  main.cpp
.github/workflows/: c-cpp.yml
include/: Constants.h  Game.h  GameManager.h  Structures.h
src/: GameManager.cpp  game.cpp  input.cpp  renderer.cpp
